# distinstall-python

./: .gitignore  CHANGELOGS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  demo.md  pkglist.txt  pyproject.toml  requirements.txt  run.sh  setup.py  wiki.md
docker/: archlinux.Dockerfile  debian.Dockerfile  setup-archlinux.sh  setup-debian.sh
docs/: REFERENCES.md  generating-demo.md
docs/makefiles/: README.md  documentation.Makefile  manual-running.Makefile
docs/usages/: api.md  ui.md
src/: main.py  setup.py  unittest.py
src/app/: runner.py
src/app/distributions/archlinux/: mechanism.py
src/distinstall-python/: main.py  setup.py
src/distinstall-python/app/distributions/: __init__.py
src/distinstall-python/lib/: cli.py  device_management.py  env.py  user_management.py  utils.py
src/lib/: cli.py  config_handler.py  device_management.py  env.py  process.py  user_management.py
src/pydistinstall/: main.py  practice-ground.py  setup.py
src/pydistinstall/app/: main.py  runner.py  setup.py
src/pydistinstall/app/distributions/archlinux/: mechanism.py
src/pydistinstall/app/lib/: config_handler.py  user_management.py
src/pydistinstall/core/distributions/archlinux/: __init__.py  mechanism.py
src/pydistinstall/lib/: const.py  process.py
src/pydistinstall/utils/: device_management.py  format.py  general.py  process.py
src/pydistinstall/utils/chroot/: execution.py  mount.py
src/pydistinstall/utils/chroot/io/: files.py
src/pydistinstall/utils/io/: disk.py
tests/: config.yaml.bak  test_archlinux_baseinstall.py
